vbnc/vbnc/vbnc/tests/Errors/30311-8.vb
Class T
    Const M_Date As Date = True
End Class